--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
@@ -24,9 +26,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "workbox-webpack-plugin": "^5.1.2"
   }
 }
